[Task][27048][Manager] Xem thong tin cac khu vuc

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -23,6 +23,7 @@ links:
   airport: 'https://www.hanoiairportonline.com/'
 paginate:
   contracts_per_page: 9
+  slots_per_page: 9
 status:
   pending: 1
   approve: 2
