--- a/config/settings.yml
+++ b/config/settings.yml
@@ -12,7 +12,7 @@ validations:
     identity_number:
       min_length: 9
       max_length: 12
-      regex: !ruby/regexp /([0-9])/
+      regex: !ruby/regexp /\A[0-9]*\z/
     phone_number:
       regex: !ruby/regexp /(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{4}/
   employee:
