--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "tempusdominus-bootstrap-4": "^5.1.2",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0"
   },
