--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -7,13 +7,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install bundle
-        run: sudo gem install bundler:1.17.2
+      - run: |
+          sudo /etc/init.d/mysql start
       - name: Install bundler
-        run: bundle install
+        run: sudo gem install bundler
+      - uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+              ${{ runner.os }}-gems-
+      - name: Bundle install
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
       - name: Rubocop
-        run: bundle exec rubocop
+        run: bundle exec rubocop -c .rubocop.yml
       - name: Rails Best Practices
         run: bundle exec rails_best_practices -e "db/schema.rb,db/migrate,vendor,app/models/application_record.rb"
       - name: Rpec
-        run: bundle exec rspec --format documentation
+        run: |
+          DATABASE_USERNAME=root DATABASE_PASSWORD=root DATABASE_NAME_DEVELOPMENT=store_management_development DATABASE_NAME_TEST=store_management_test bundle exec rails db:create
+          DATABASE_USERNAME=root DATABASE_PASSWORD=root DATABASE_NAME_DEVELOPMENT=store_management_development DATABASE_NAME_TEST=store_management_test bundle exec rspec --format documentation
+
