--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ yarn-debug.log*
 .yarn-integrity
 
 /test
-/config/database.yml
-/spec
-!/spec/rails_helper.rb
-!/spec/spec_helper.rb
+
+coverage
+
+# Ignore application configuration
+/config/application.yml
