--- a/config/settings.yml
+++ b/config/settings.yml
@@ -19,6 +19,9 @@ validations:
     name_maximum: 50
     password_minimum: 5
     store_unit: 1
+    default_password: "123456"
+    default_unit_id: 1 
+    default_role_id: 1
 links:
   airport: 'https://www.hanoiairportonline.com/'
   googlemap: 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.3309818186235!2d105.80198221533867!3d21.218719886641136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135021539afc453%3A0xe6e0faa3520226b4!2zQ-G6o25nIGjDoG5nIGtow7RuZyBxdeG7kWMgdOG6vyBO4buZaSBCw6Bp!5e0!3m2!1svi!2s!4v1598076515519!5m2!1svi!2s'
