--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,7 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
+  collation: utf8mb4_0900_ai_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV["DATABASE_USERNAME"] %>
   password: <%= ENV["DATABASE_PASSWORD"] %>
